# nitrokey-app2

./: .flake8  .gitattributes  .gitignore  .gitmodules  Makefile  README.md  build-wine.sh  dev-requirements.txt  gui.py  gui_resources.py  libnk.py  nitrokey-app2.py  pyproject.toml
.github/workflows/: cd-linux-arm64.yaml  cd-linux-x64.yaml  cd-linux.yaml  cd-macos-arm64.yaml  cd-macos-intel64.yaml  cd-pypi.yaml  cd-windows.yaml  ci.yaml
ci-scripts/linux/pyinstaller/: nitrokey-app-onedir.spec  nitrokey-app-onefile.spec
ci-scripts/linux/rpm/: nitrokey-app2.desktop  nitrokey-app2.spec
ci-scripts/macos/pkg/: requirements_arm64.plist  requirements_intel64.plist
ci-scripts/macos/pyinstaller/: nitrokey-app-onedir_arm64.spec  nitrokey-app-onedir_intel64.spec  nitrokey-app-onefile_arm64.spec  nitrokey-app-onefile_intel64.spec  nitrokey-app.icns
ci-scripts/pypi/: .pypirc_template
ci-scripts/windows/pyinstaller/: file_version_info_metadata.yaml  nitrokey-app-onedir.spec  nitrokey-app-onefile.spec
ci-scripts/windows/wix/: Product.wxs
docs/: readme.md  release.md
flatpak/: Makefile  com.nitrokey.nitrokey-app2.yml  flatpak-pip-generator.patch  pypi-dependencies.json  requirements.txt
meta/: com.nitrokey.nitrokey-app2.appdata.xml  com.nitrokey.nitrokey-app2.desktop  com.nitrokey.nitrokey-app2.metainfo.xml  nitrokey-app2.desktop
nitrokeyapp/: __init__.py  __main__.py  about_dialog.py  add_secret_dialog.py  change_pin_dialog.py  common_ui.py  device_data.py  device_manager.py  device_view.py  device_worker.py  error_dialog.py  exceptions.py  gui.py  information_box.py  insert_nitrokey.py  key_generation.py  loading_screen.py  logger.py  nk3_button.py  overview_tab.py  passswordsafe.py  passwordsafe.py  pin_dialog.py  progress_box.py  prompt_box.py  pynitrokey_for_gui.py  qt_utils_mix_in.py  resources_rc.py  secrets_widget.py  set_pin_dialog.py  setup_wizard.py  storage_wizard.py  touch.py  tray_notification.py  ui_loader.py  update.py  utils.py  welcome_tab.py  windows_notification.py  worker.py
nitrokeyapp/bak/: backend_thread.py  change_pin_dialog.py  clock_progressbar.py  key_generation.py  loading_screen.py  passwordsafe.py  pin_dialog.py  set_pin_dialog.py  setup_wizard.py  storage_wizard.py
nitrokeyapp/bak/ui/: insert_Nitrokey.ui  keys_tab.ui  password_safe_tab.ui  pindialog.ui  settings_tab.ui
nitrokeyapp/fido2_tab/: __init__.py  data.py  ui.py  worker.py
nitrokeyapp/overview_tab/: __init__.py  worker.py
nitrokeyapp/piv_tab/: __init__.py  data.py  ui.py  worker.py
nitrokeyapp/secrets_tab/: __init__.py  backup_restore_ui.py  data.py  ui.py  worker.py
nitrokeyapp/settings_tab/: __init__.py  data.py  worker.py
nitrokeyapp/ui/: aboutdialog.py  aboutdialog.ui  aboutdialog_ui.py  add_secret_dialog.ui  breeze_resources.py  change_pin_dialog.py  change_pin_dialog_ui.py  error_dialog.ui  insert_Nitrokey.py  insert_Nitrokey_ui.py  key_generation.py  key_generation_ui.py  licensedialog.py  mainwindow.py  mainwindow.ui  mainwindow_alternative.ui  mainwindow_alternative_ui.py  mainwindow_ui.py  mainwindowtest.py  nitrokey_theme.xml  overview_tab.ui  pindialog.py  pindialog_ui.py  piv_tab.ui  resources.qrc  secrets.ui  secrets_tab.ui  securitydialog.py  set_pin_dialog.py  set_pin_dialog1.py  set_pin_dialog_ui.py  settings.py  settings_tab.ui  settins_new.py  settins_new.ui  setup-wizard.ui  setup_wizard.py  setup_wizard_ui.py  stick20changepassworddialog.py  stick20changepassworddialog.ui  (+15 more)
nitrokeyapp/ui/icons/: backup.svg.license  restore.svg.license
nitropyapp/: __init__.py  __main__.py  about_dialog.py  change_pin_dialog.py  edit_button_widget.py  exceptions.py  gui.py  gui_resources.py  insert_nitrokey.py  key_generation.py  libnk.py  loading_screen.py  nk3_button.py  nk3_button.py.rej  output.py  passswordsafe.py  pin_dialog.py  pynitrokey_for_gui.py  qt_utils_mix_in.py  qt_utils_mix_in.py.rej  set_pin_dialog.py  setup_wizard.py  storage_wizard.py  storage_wizard.py.rej  tray_notification.py  update.py  update.py.rej  windows_notification.py
nitropyapp/ui/: aboutdialog.ui  breeze_resources.py  change_pin_dialog.ui  key_generation.ui  mainwindow.ui  mainwindow_alternative.ui  mainwindowtest.py  mainwindowtest.ui  resources.qrc  set_pin_dialog.ui  settings.ui  storage.ui  ui_aboutdialog.py  ui_mainwindow_alternative.py  ui_set_pin_dialog.py
ui/: adapt_ui_files.sh  stick20changepassworddialog.ui  stick20debugdialog.ui  stick20lockfirmwaredialog.ui  stick20responsedialog.ui  stick20updatedialog.ui
wine-build/: Dockerfile  build-wine-docker.sh  nitropy.spec.tmpl
