[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nitrokeyapp"
description = "Graphical application to manage Nitrokey devices"
readme = "README.md"
authors = [
  { name = "Nitrokey", email = "pypi@nitrokey.com" },
]
requires-python = ">=3.9"
classifiers=[
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
  "pyqt5",
  "pyqt5-stubs",
  "pyudev",
  "pynitrokey ==0.4.40",
  "pywin32 ==305; sys_platform =='win32'",
  "qt_material",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "black >=22.1.0,<23",
  "flake8",
  "flit >= 3.2,<4",
  "isort",
  "mypy >=1.4,<1.5",
  "pyinstaller ==5.9.0",
  "pyinstaller-versionfile ==2.1.1; sys_platform=='win32'",
]

[project.urls]
Source = "https://github.com/Nitrokey/nitrokey-app2"

[project.scripts]
nitrokeyapp = "nitrokeyapp.__main__:main"

[tool.isort]
py_version = "39"
profile = "black"
line_length = 80

[tool.black]
target-version = ["py39"]

[tool.mypy]
show_error_codes = true
python_version = "3.9"

[[tool.mypy.overrides]]
module = [
  "nitrokeyapp.*",
]
disallow_untyped_defs = true

# generated and unused files
[[tool.mypy.overrides]]
module = [
  "nitrokeyapp.bak.*",
  "nitrokeyapp.ui.*",
]
ignore_errors = true

# libraries without annotations
[[tool.mypy.overrides]]
module = [
  "win32api.*",
  "win32con.*",
  "win32gui.*",
  "pyudev.*",
  "ruamel.*",
  "tlv8.*",
  "qt_material.*",
]
ignore_missing_imports = true
