[build-system]
requires = ["poetry-core>=2,<3"]
build-backend = "poetry.core.masonry.api"

[project]
name = "nitrokeyapp"
version = "2.3.5"
description = "Graphical application to manage Nitrokey devices"
authors = [
  { name = "Nitrokey", email = "pypi@nitrokey.com" },
]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/nitrokey/nitrokey-app2"
documentation = "https://docs.nitrokey.com/software/nk-app2/"
requires-python = ">=3.9.2,<3.14"
dynamic = [
  "classifiers",
  "dependencies",
]
packages = [
  {include = "nitrokeyapp"}
]

[project.scripts]
nitrokeyapp = "nitrokeyapp.__main__:main"

[tool.poetry]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
]

[tool.poetry.dependencies]
nitrokey = "^0.3.2"
pySide6 = ">=6.6.0"
pywin32 = { version = "305", markers = "sys_platform =='win32'" }
usb-monitor = "^1.21"

[tool.poetry.group.dev.dependencies]
PySide6-stubs = "^6.4.2"
black = ">=22.1.0,<23"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = ">=1.4,<1.5"

[tool.poetry.group.deploy.dependencies]
pyinstaller = "^6.3.0"
pyinstaller-versionfile = { version = "2.1.1", markers = "sys_platform=='win32'" }

[tool.isort]
py_version = "39"
profile = "black"
line_length = 80

[tool.black]
target-version = ["py39"]

[tool.mypy]
show_error_codes = true
python_version = "3.9"

[[tool.mypy.overrides]]
module = [
  "nitrokeyapp.*",
]
disallow_untyped_defs = true

# generated and unused files
[[tool.mypy.overrides]]
module = [
  "nitrokeyapp.bak.*",
  "nitrokeyapp.ui.*",
]
ignore_errors = true

# libraries without annotations
[[tool.mypy.overrides]]
module = [
  "win32api.*",
  "win32con.*",
  "win32gui.*",
  "usbmonitor.*",
]
ignore_missing_imports = true
